solved images side-by-side on mobile view

--- a/index.css
+++ b/index.css
@@ -161,6 +161,7 @@ a{
     background-color: black;
     border-radius: 10px;
 }
+
 @media screen and (max-width: 600px) {
     .toggle-button{
         display: flex;
@@ -196,4 +197,11 @@ a{
         width: 100%
         
     }
+    .child4{
+        grid-row-start: 3;
+    }
+    .child6{
+        grid-row-start: 7;
+    }
+    
 }
